entry/.preview/intermediates/res/debug/rich/assets/js/default/compile_error.log
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: C:\Users\sahil\DevEcoStudioProjects\List_View_Library\entry\src\main\js\default\pages\page2\page2.js: Unexpected token (6:14)

  4 |         heading:"2021 in review: When a brain blob in a dish grew a pair of ‘eyes’",
  5 |         heading_details:"Headings",
> 6 |         author="anonymous"
    |               ^
  7 |     },
  8 | }
  9 | 
    at Parser._raise (E:\sdk\js\2.2.0.3\build-tools\ace-loader\node_modules\@babel\parser\lib\index.js:742:17)
    at Parser.raiseWithData (E:\sdk\js\2.2.0.3\build-tools\ace-loader\node_modules\@babel\parser\lib\index.js:735:17)
    at Parser.raise (E:\sdk\js\2.2.0.3\build-tools\ace-loader\node_modules\@babel\parser\lib\index.js:729:17)
    at Parser.unexpected (E:\sdk\js\2.2.0.3\build-tools\ace-loader\node_modules\@babel\parser\lib\index.js:8779:16)
    at Parser.checkExpressionErrors (E:\sdk\js\2.2.0.3\build-tools\ace-loader\node_modules\@babel\parser\lib\index.js:8877:12)
    at Parser.parseMaybeAssign (E:\sdk\js\2.2.0.3\build-tools\ace-loader\node_modules\@babel\parser\lib\index.js:9437:12)
    at Parser.parseExportDefaultExpression (E:\sdk\js\2.2.0.3\build-tools\ace-loader\node_modules\@babel\parser\lib\index.js:12306:24)
    at Parser.parseExport (E:\sdk\js\2.2.0.3\build-tools\ace-loader\node_modules\@babel\parser\lib\index.js:12208:31)
    at Parser.parseStatementContent (E:\sdk\js\2.2.0.3\build-tools\ace-loader\node_modules\@babel\parser\lib\index.js:11208:27)
    at Parser.parseStatement (E:\sdk\js\2.2.0.3\build-tools\ace-loader\node_modules\@babel\parser\lib\index.js:11104:17)
    at Parser.parseBlockOrModuleBlockBody (E:\sdk\js\2.2.0.3\build-tools\ace-loader\node_modules\@babel\parser\lib\index.js:11679:25)
    at Parser.parseBlockBody (E:\sdk\js\2.2.0.3\build-tools\ace-loader\node_modules\@babel\parser\lib\index.js:11665:10)
    at Parser.parseTopLevel (E:\sdk\js\2.2.0.3\build-tools\ace-loader\node_modules\@babel\parser\lib\index.js:11035:10)
    at Parser.parse (E:\sdk\js\2.2.0.3\build-tools\ace-loader\node_modules\@babel\parser\lib\index.js:12671:10)
    at parse (E:\sdk\js\2.2.0.3\build-tools\ace-loader\node_modules\@babel\parser\lib\index.js:12722:38)
    at parser (E:\sdk\js\2.2.0.3\build-tools\ace-loader\node_modules\@babel\core\lib\parser\index.js:54:34)
    at parser.next (<anonymous>)
    at normalizeFile (E:\sdk\js\2.2.0.3\build-tools\ace-loader\node_modules\@babel\core\lib\transformation\normalize-file.js:93:38)
    at normalizeFile.next (<anonymous>)
    at run (E:\sdk\js\2.2.0.3\build-tools\ace-loader\node_modules\@babel\core\lib\transformation\index.js:31:50)
    at run.next (<anonymous>)
    at Function.transform (E:\sdk\js\2.2.0.3\build-tools\ace-loader\node_modules\@babel\core\lib\transform.js:27:41)
    at transform.next (<anonymous>)
    at step (E:\sdk\js\2.2.0.3\build-tools\ace-loader\node_modules\gensync\index.js:254:32)
    at E:\sdk\js\2.2.0.3\build-tools\ace-loader\node_modules\gensync\index.js:266:13
    at async.call.result.err.err (E:\sdk\js\2.2.0.3\build-tools\ace-loader\node_modules\gensync\index.js:216:11)